2013-09-19 MickeM
 * Fixed issue with skipping registry
 * Added page (commited - physical) memory metric
 
2013-09-17 MickeM
 * Added very CRUDE initial eventlog support for "modern" eventlog API.
   This means NSClient++ can FINALLY! check all eventlogs on windows 2008 and windows 2012!
   Please be aware that this is a proof of concept and the very first build so it is not "complete" yet (I will fix that in the next few days).

2013-09-16 MickeM
 * Fixed NRPE issue

2013-09-09 MickeM
 * Fixed check_multi
 * added new options to check_multi (suffic, prefix and separator) to better control the output
 * starting services (auto-start) is now a warning state.

 
2013-09-08 MickeM
 * Brand new filters
 * Modernised check_cpu
 * Modernised check_process
 * Modernised check_service
 * Modernised check_uptime
 * Modernised check_tasksched
 * Merged CheckTaskSched1 and CheckTaskSched2 into CheckTaskSched
 * Added check_os_version

2013-05-05 MickeM
 * Fixed a bug in the check_logfile which made filtering bail-out after the first hit.
 * Added default column-split as \t
 
2013-04-30 MickeM
 * Fixed issue with negative performance data
 * Added unit test for arguments and external script
 * Fixet truncation issue with performance data (#624)

2013-04-27 MickeM
 * Fixed bug added in build 95 regarding allowing nasty characters

2013-04-24 MickeM
 * Added auto-uc to get hostname as upper case

2013-04-23 MickeM
 * Added encoding option to external scripts
 * Added encoding option to NSCAClient
 * Added NSCPDOTNET.dll for making dot-net plugins

2013-04-22 MickeM
 * Fixed an issue with % in warn and crit thresholds for CheckCPU

2013-04-21 MickeM
 * Fixed issue with eventlog reset (will not rescan from the beginning if an error is encountered)

2013-04-16 MickeM
 * re-added check_nt FILEAGE option.

2013-04-13 MickeM
 * Fixed issue with binding to multiple interfaces (ie. machines with both ipv6 and ipv4 addresses).