@@ -294,7 +294,7 @@ SET(NSCP_DEF_PLUGIN_LIB
 
 SET(MAIN_NSCP_TARGET "nscp" "nscp_full_config")
 IF(BREAKPAD_FOUND)
-	SET(MAIN_NSCP_TARGET ${MAIN_NSCP_TARGET} "nscpnobp")
+	SET(MAIN_NSCP_TARGET ${MAIN_NSCP_TARGET})
 ENDIF(BREAKPAD_FOUND)
 
 
