@@ -9,7 +9,7 @@ cmake_minimum_required(VERSION 2.6)
 MESSAGE(STATUS "Looking for dependencies:")
 FIND_PACKAGE(PythonInterpEx)
 FIND_PACKAGE(PythonLibsEx)
-FIND_PACKAGE(TINYXML2)
+FIND_PACKAGE(TinyXML2)
 FIND_PACKAGE(ZeroMQ)
 FIND_PACKAGE(CryptoPP)
 FIND_PACKAGE(LUA)
@@ -19,7 +19,7 @@ FIND_PACKAGE(GoogleTest)
 FIND_PACKAGE(GoogleBreakpad COMPONENTS common exception_handler crash_report_sender crash_generation_client)
 FIND_PACKAGE(OpenSSL)
 FIND_PACKAGE(Boost COMPONENTS system filesystem thread regex date_time program_options python)
-FIND_PACKAGE(JSON_SPIRIT)
+FIND_PACKAGE(Json_Spirit)
 FIND_PACKAGE(Sphinx)
 
 IF(WIN32)
