@@ -20,8 +20,8 @@ if (MSVC11)
 	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${BUILD_TARGET_LIB_PATH})
 endif(MSVC11)
 IF(BREAKPAD_FOUND)
-	INSTALL(CODE "SET(PDB_FULL_PATH ${BUILD_TARGET_LIB_PATH}/${TARGET}.pdb)")
-	INSTALL(CODE "FILE(INSTALL DESTINATION \${CMAKE_INSTALL_PREFIX}/${MODULE_SUBFOLDER} TYPE EXECUTABLE FILES \${PDB_FULL_PATH})")
+#	INSTALL(CODE "SET(PDB_FULL_PATH ${BUILD_TARGET_LIB_PATH}/${TARGET}.pdb)")
+#	INSTALL(CODE "FILE(INSTALL DESTINATION \${CMAKE_INSTALL_PREFIX}/${MODULE_SUBFOLDER} TYPE EXECUTABLE FILES \${PDB_FULL_PATH})")
 #	INSTALL(CODE "SET(SYM_FULL_PATH ${BUILD_TARGET_LIB_PATH}/${TARGET}.sym)")
 #	INSTALL(CODE "ADD_CUSTOM_COMMAND(OUTPUT \${SYM_FULL_PATH} COMMAND ${BREAKPAD_DUMPSYMS_EXE} \${PDB_FULL_PATH} > \${SYM_FULL_PATH})")
 #	INSTALL(CODE "FILE(INSTALL DESTINATION \${CMAKE_INSTALL_PREFIX}/${MODULE_SUBFOLDER} TYPE EXECUTABLE FILES \${SYM_FULL_PATH})")
