@@ -12,5 +12,5 @@ TARGET_SITE = "${TARGET_SITE}"
 CMAKE_SOURCE_DIR  = "${CMAKE_CURRENT_SOURCE_DIR}"
 SCP_BINARY = 'c:\Progra~2\PuTTY\pscp.exe' # ${PSCP_EXE}
 
-if CMAKE_CL_64 != "0": # Due to bug in x64 dump_symbols (or possible windows API)
-	BREAKPAD_FOUND = "FALSE"
+#if CMAKE_CL_64 != "0": # Due to bug in x64 dump_symbols (or possible windows API)
+#	BREAKPAD_FOUND = "FALSE"
