@@ -84,25 +84,6 @@ ENDIF(PYTHONLIBSEX_FOUND)
 
 # Add breakpad
 IF(BREAKPAD_FOUND)
-	ADD_EXECUTABLE(${TARGET}nobp ${service_SRCS})
-
-	TARGET_LINK_LIBRARIES(${TARGET}nobp
-		${Boost_FILESYSTEM_LIBRARY}
-		${Boost_PROGRAM_OPTIONS_LIBRARY}
-		${Boost_THREAD_LIBRARY}
-		${NSCP_DEF_PLUGIN_LIB}
-		${EXTRA_LIBS}
-		${JSON_LIB}
-		settings_manager
-	)
-	INSTALL(TARGETS ${TARGET}nobp RUNTIME DESTINATION .)
-	IF(WIN32)
-		INSTALL(CODE "SET(PDB_FULL_PATH ${BUILD_TARGET_EXE_PATH}/${TARGET}nobp.pdb)")
-		INSTALL(CODE "FILE(INSTALL DESTINATION \${CMAKE_INSTALL_PREFIX} TYPE EXECUTABLE FILES \${PDB_FULL_PATH})")
-	ENDIF(WIN32)
-	SET_TARGET_PROPERTIES(${TARGET}nobp PROPERTIES FOLDER "core")
-
-
 	SET(service_SRCS ${service_SRCS} ${NSCP_INCLUDEDIR}/breakpad/exception_handler_win32.cpp)
 	IF(WIN32)
 		SET(service_SRCS ${service_SRCS} ${NSCP_INCLUDEDIR}/breakpad/exception_handler_win32.hpp)
@@ -140,20 +121,15 @@ TARGET_LINK_LIBRARIES(${TARGET}
 )
 INSTALL(TARGETS ${TARGET} RUNTIME DESTINATION .)
 IF(WIN32)
-	INSTALL(CODE "SET(PDB_FULL_PATH ${BUILD_TARGET_EXE_PATH}/${TARGET}.pdb)")
-	INSTALL(CODE "FILE(INSTALL DESTINATION \${CMAKE_INSTALL_PREFIX} TYPE EXECUTABLE FILES \${PDB_FULL_PATH})")
+#	INSTALL(CODE "SET(PDB_FULL_PATH ${BUILD_TARGET_EXE_PATH}/${TARGET}.pdb)")
+#	INSTALL(CODE "FILE(INSTALL DESTINATION \${CMAKE_INSTALL_PREFIX} TYPE EXECUTABLE FILES \${PDB_FULL_PATH})")
 ENDIF(WIN32)
 SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER "core")
-SET_TARGET_PROPERTIES(${TARGET}nobp PROPERTIES FOLDER "core")
 IF(MSVC11)
 	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${BUILD_TARGET_EXE_PATH})
 	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BUILD_TARGET_EXE_PATH})
 	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BUILD_TARGET_EXE_PATH})
 	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${BUILD_TARGET_EXE_PATH})
-	SET_TARGET_PROPERTIES(${TARGET}nobp PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${BUILD_TARGET_EXE_PATH})
-	SET_TARGET_PROPERTIES(${TARGET}nobp PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BUILD_TARGET_EXE_PATH})
-	SET_TARGET_PROPERTIES(${TARGET}nobp PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BUILD_TARGET_EXE_PATH})
-	SET_TARGET_PROPERTIES(${TARGET}nobp PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${BUILD_TARGET_EXE_PATH})
 ENDIF(MSVC11)
 
 SOURCE_GROUP("NSCP API" REGULAR_EXPRESSION .*include/nscapi/.*)
